[UPDATE]: Refactored index.html and added logo image

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="./src/assets/logo_chico_neuradev.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Neuradev - AI Development & Automation Agency</title>
-    <meta name="description" content="Transform your business with cutting-edge AI solutions and intelligent automation. Get faster results, reduce costs, and stay ahead of the competition.">
+    <meta
+      name="description"
+      content="Transform your business with cutting-edge AI solutions and intelligent automation. Get faster results, reduce costs, and stay ahead of the competition."
+    />
   </head>
   <body>
     <div id="root"></div>
